# sanctify-php

./: .gitignore  CHANGELOG.md  CITATION.cff  COMPREHENSIVE-ROADMAP.md  CONTRIBUTING.md  DUBLINCORE.rdf  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  META.scm  PRIORITY.adoc  PROGRESS-SUMMARY.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  QUICKSTART.adoc  README.adoc  ROADMAP.adoc  ROADMAP.scm  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  sanctify-php.cabal  setup.sh  stapeln.toml  void.ttl
.cabal/: config
.cache/cabal/: config
.cache/cabal/store/ghc-9.6.7/ansi-terminal-1.1.5-7fcfc1fc52c2acb41de7fc10a1db749a9232d4b338000587672bc74b78599ad2/: cabal-hash.txt
.cache/cabal/store/ghc-9.6.7/ansi-terminal-types-1.1.3-461b0c93c3b2597d8da71e22b6229f021515b3504f7949bdaec63dcf424cf2c1/: cabal-hash.txt
.cache/cabal/store/ghc-9.6.7/colour-2.3.7-d52569f7463117c978e36302ecf3f89281f76dd09c2220cec099f1910049dcd0/: cabal-hash.txt
.cache/cabal/store/ghc-9.6.7/colour-2.3.7-d52569f7463117c978e36302ecf3f89281f76dd09c2220cec099f1910049dcd0/share/: CHANGELOG
.cache/cabal/store/ghc-9.6.7/package.db/: ansi-terminal-1.1.5-7fcfc1fc52c2acb41de7fc10a1db749a9232d4b338000587672bc74b78599ad2.conf  ansi-terminal-types-1.1.3-461b0c93c3b2597d8da71e22b6229f021515b3504f7949bdaec63dcf424cf2c1.conf  colour-2.3.7-d52569f7463117c978e36302ecf3f89281f76dd09c2220cec099f1910049dcd0.conf  package.cache
.github/workflows/: boj-build.yml  casket-pages.yml  codeql-analysis.yml  codeql.yml  comprehensive-quality.yml  generator-generic-ossf-slsa3-publish.yml  guix-nix-policy.yml  haskell.yml  mirror.yml  npm-bun-blocker.yml  php-security.yml  quality.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/svc/: README.adoc
.well-known/: humans.txt  security.txt
app/: Main.hs
bench/: Main.hs
docs/: IMPLEMENTATION-TRACKER.md  INDIEWEB-COLLABORATION.md  INTEGRATION-SUMMARY.md  PHP-AEGIS-HANDOVER.md  README.adoc  ROADMAP.md  STANDALONE.md  TARGET-AUDIENCE.md  UPSTREAM-ISSUES.md  tech-debt-2026-05-26.md
docs/accessibility/: README.adoc
docs/api/: API-REFERENCE.adoc
docs/developer/: ARCHITECTURE.adoc  EXTENDING.adoc
docs/governance/: CRG-AUDIT-2026-04-18.adoc  CRG-LIFT-PLAN-2026-04-18.adoc  README.adoc
docs/user/: USER-GUIDE-PART2.adoc  USER-GUIDE.adoc
guix/: wordpress-container.scm
src/Sanctify/: AST.hs  Config.hs  Emit.hs  Parser.hs  Report.hs  Ruleset.hs
src/Sanctify/Analysis/: Advanced.hs  DeadCode.hs  Security.hs  Taint.hs  Types.hs
src/Sanctify/Parser/: Lexer.hs  Token.hs
src/Sanctify/Transform/: Sanitize.hs  Strict.hs  StrictTypes.hs  TypeHints.hs
src/Sanctify/WordPress/: Constraints.hs  Hooks.hs  Security.hs
test/: AspectSpec.hs  E2ESpec.hs  Main.hs  ParserSpec.hs  PropertySpec.hs  README.md  SecuritySpec.hs  Spec.hs  TransformSpec.hs
test-plugins/: TEST-REPORT.md  secure-contact-form.php  vulnerable-contact-form.php
test/fixtures/: clean_code.php  custom-ruleset.json  minimal-ruleset.json  php82-features.php  unreachable_code.php  unused_parameters.php  unused_variables.php  vulnerable-sql.php  vulnerable-xss.php  wordpress-safe.php  wordpress-unsafe.php
(+38 files in other folders)
