cabal-version:      3.0
name:               sanctify-php
version:            0.2.0
synopsis:           Haskell-based PHP hardening and security analysis tool
description:
    Sanctify-PHP transforms PHP code to be safer and more robust:
    .
    * Comprehensive PHP 8.2+ parser (readonly classes, DNF types, enums, attributes)
    * Advanced security analysis (OWASP Top 10, ReDoS, SSRF, XXE, TOCTOU)
    * WordPress-specific security checks (nonce, capabilities, AJAX, REST API)
    * Automatic code transformations (sanitization, type hints, strict types)
    * Multiple output formats (text, JSON, SARIF, HTML)
    * Interactive fix mode and watch mode for development
    * Infrastructure export (php.ini, nginx, Guix/Nix)
license:            PMPL-1.0-or-later
license-file:       LICENSE
author:             Jonathan D.A. Jewell
maintainer:         jonathan.jewell@gmail.com
category:           Development, Security
build-type:         Simple
extra-doc-files:    README.adoc

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        Sanctify.Parser
        Sanctify.AST
        Sanctify.Analysis.Security
        Sanctify.Analysis.Advanced
        Sanctify.Analysis.Types
        Sanctify.Analysis.Taint
        Sanctify.Analysis.DeadCode
        Sanctify.Transform.StrictTypes
        Sanctify.Transform.TypeHints
        Sanctify.Transform.Sanitize
        Sanctify.Transform.Strict
        Sanctify.WordPress.Constraints
        Sanctify.WordPress.Hooks
        Sanctify.WordPress.Security
        Sanctify.Emit
        Sanctify.Config
        Sanctify.Report
        Sanctify.Ruleset
    other-modules:
        Sanctify.Parser.Lexer
        Sanctify.Parser.Token
    build-depends:
        base ^>=4.17,
        text >=2.0,
        containers >=0.6,
        mtl >=2.3,
        transformers >=0.6,
        megaparsec >=9.0,
        parser-combinators >=1.3,
        aeson >=2.0,
        yaml >=0.11,
        filepath >=1.4,
        directory >=1.3,
        bytestring >=0.11,
        vector >=0.13,
        unordered-containers >=0.2,
        prettyprinter >=1.7,
        optparse-applicative >=0.18
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        LambdaCase
        DerivingStrategies
        DeriveGeneric
        DeriveAnyClass

executable sanctify
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17,
        sanctify-php,
        text,
        containers,
        mtl,
        optparse-applicative,
        filepath,
        directory,
        time,
        aeson,
        bytestring
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
        LambdaCase

test-suite sanctify-php-test
    import:           warnings
    default-language: GHC2021
    default-extensions:
        OverloadedStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        ParserSpec
        SecuritySpec
        TransformSpec
    build-depends:
        base ^>=4.17,
        sanctify-php,
        hspec >=2.10,
        hspec-discover >=2.10,
        hspec-megaparsec >=2.2,
        hspec-golden >=0.2,
        text,
        containers,
        filepath,
        directory
    build-tool-depends:
        hspec-discover:hspec-discover >=2.10
